--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
             <article class="col-12 col-md-4">
                 <div class="post-item">
                     <div class="post-thumb">
-                        <img class="img-fluid shadow rounded" src="{{ with .Params.image }}{{ . | absURL }}{{ end }}" alt="Generic placeholder image">
+                        <img width="200px" class="img-fluid shadow rounded" src="{{ with .Params.thumbnail }}{{ . | absURL }}{{ end }}" alt="Generic placeholder image">
                     </div>
                     <div class="post-title">
                         <h3 class="mt-0">
@@ -21,17 +21,13 @@
                     <div class="post-meta">
                         <ul class="list-inline">
                             <li class="list-inline-item">
-                                <span>By</span>
-                                {{ .Params.author }}
-                            </li>
-                            <li class="list-inline-item">
-                                <span>at</span>
-                                <span>{{ .Date.Format .Site.Params.dateFormat }}</span>
+                                <span>By {{ .Params.author | default .Site.Params.author }}
+                                    on {{ .Date.Format .Site.Params.dateFormat }}</span>
                             </li>
                         </ul>
                     </div>
                     <div class="post-content">
-                        <p>{{ .Summary }}</p>
+                        <p>{{ .Params.lead }}</p>
                     </div>
                     <a class="btn btn-main" href="{{ .Permalink }}">Read more</a>
                 </div>
