--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -12,12 +12,12 @@
             </div>
         </div>
         <div class="row">
-            {{ range first 3 .Site.RegularPages}}
+            {{ range first 3 (where .Site.RegularPages "Section" "devlogs")}}
             {{ "<!-- single blog post -->" | safeHTML }}
             <article class="col-12 col-md-4">
                 <div class="post-item">
                     <div class="post-thumb">
-                        <img class="img-fluid shadow rounded" src="{{ .Params.image | absURL }}" alt="Generic placeholder image">
+                        <img class="img-fluid shadow rounded" src="{{ .Params.thumbnail | absURL }}" alt="thumbnail">
                     </div>
                     <div class="post-title">
                         <h3 class="mt-0">
@@ -27,17 +27,13 @@
                     <div class="post-meta">
                         <ul class="list-inline">
                             <li class="list-inline-item">
-                                <span>By</span>
-                                {{ .Params.author }}
-                            </li>
-                            <li class="list-inline-item">
-                                <span>at</span>
-                                <span>{{ .Date.Format .Site.Params.dateFormat }}</span>
+                                <span>By {{ .Params.author | default .Site.Params.author }}
+                                    on {{ .Date.Format .Site.Params.dateFormat }}</span>
                             </li>
                         </ul>
                     </div>
                     <div class="post-content">
-                        <p>{{ .Summary }}</p>
+                        <p>{{ .Params.lead }}</p>
                     </div>
                     <a class="btn btn-main" href="{{ .Permalink }}">Read more</a>
                 </div>
