--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,8 +1,20 @@
 <head>
+{{- if not .Site.IsServer }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.GoogleAnalytics }}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', '{{ .Site.GoogleAnalytics }}', { 'anonymize_ip': true });
+</script>
+{{- end }}
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
 {{ with .Site.Params.author }} <meta name="author" content="{{ . }}">{{ end }}
+{{ if .Site.Params.opengraph }}{{ template "_internal/opengraph.html" . }}{{ end }}
+{{ if .Site.Params.twitter_cards }}{{ template "_internal/twitter_cards.html" . }}{{ end }}
 {{ hugo.Generator }}
 
 <title>{{ .Title }}</title>
@@ -11,7 +23,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {{ "<!-- Favicon -->" | safeHTML }}
-<link rel="shortcut icon" type="image/x-icon" href="{{ `images/favicon.ico` | absURL }}" />
+<link rel="shortcut icon" type="image/x-icon" href="{{ .Site.Params.favicon | default `/favicon.ico` | absURL }}" />
 
 {{"<!-- Stylesheets -->" | safeHTML}}
 {{ "<!-- Themefisher Icon font -->" | safeHTML }}
@@ -19,13 +31,22 @@
 {{ "<!-- bootstrap.min css -->" | safeHTML}}
 <link rel="stylesheet" href="{{ `plugins/bootstrap/dist/css/bootstrap.min.css` | absURL }}">
 {{ "<!-- Lightbox.min css -->" | safeHTML }}
-<link rel="stylesheet" href="{{ `plugins/lightbox2/dist/css/lightbox.min.css` | absURL }}">
+<!-- <link rel="stylesheet" href="{{ `plugins/lightbox2/dist/css/lightbox.min.css` | absURL }}"> -->
 {{ "<!-- Slick Carousel -->" | safeHTML }}
-<link rel="stylesheet" href="{{ `plugins/slick-carousel/slick/slick.css` | absURL }}">
-<link rel="stylesheet" href="{{ `plugins/slick-carousel/slick/slick-theme.css` | absURL }}">
+<!-- <link rel="stylesheet" href="{{ `plugins/slick-carousel/slick/slick.css` | absURL }}"> -->
+<!-- <link rel="stylesheet" href="{{ `plugins/slick-carousel/slick/slick-theme.css` | absURL }}"> -->
 {{ "<!-- Main Stylesheet -->" | safeHTML }}
 
 {{ $styles := resources.Get "css/style.css" | minify}}
 <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
+
+
+{{ "<!-- Photo Swipe -->" | safeHTML }}
+<link rel="stylesheet" href="/photoswipe/photoswipe.css"> 
+<link rel="stylesheet" href="/photoswipe/default-skin/default-skin.css"> 
+<script src="/photoswipe/photoswipe.min.js"></script> 
+<script src="/photoswipe/photoswipe-ui-default.min.js"></script> 
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
 
 </head>
