--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -4,12 +4,16 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
+                {{ if isset .Site.Params.hero "videoURL" }}
                 <div class="video-player">
                     <img class="img-fluid rounded" src="{{ with .Site.Params.hero.videoThumb }}{{.| absURL }}{{ end }}" alt="video-thumb">
                     <a class="play-icon" href="javascript:void(0)">
                         <i class="tf-ion-play" data-video="{{ with .Site.Params.hero.videoURL }}{{.}}{{ end }}?autoplay=1"></i>
                     </a>
                 </div>
+                {{ else }}
+                <img class="img-fluid rounded" src="{{ with .Site.Params.hero.videoThumb }}{{.| absURL }}{{ end }}">
+                {{ end }}
             </div>
             <div class="col-md-6">
                 <div class="block">
@@ -22,7 +26,7 @@
                     {{ if .Site.Params.hero.button }}
                         <ul class="list-inline wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".7s">
                             <li class="list-inline-item">
-                                <a href="{{ with .Site.Params.hero.btnURL }}{{.}}{{ end }}" target="_blank" class="btn btn-main">{{ with .Site.Params.hero.btnText }}{{.}}{{ end }}</a>
+                                <a href="{{ with .Site.Params.hero.btnURL }}{{.}}{{ end }}" class="btn btn-main">{{ with .Site.Params.hero.btnText }}{{.}}{{ end }}</a>
                             </li>
                         </ul>
                     {{ end }}
