--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -1,25 +1,10 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
-{{ with $data.portfolio }}
+
+{{ with $data.media }}
     {{ if .enable }}
     {{ "<!-- Start Portfolio Section -->" | safeHTML }}
     <section class="portfolio section" id="portfolio">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <div class="title text-center">
-                        {{ with .topTitle }}
-                            <h4>{{ . }}</h4>
-                        {{ end }}
-                        {{ with .title }}
-                            <h2>{{ . }}</h2>
-                            <span class="border"></span>
-                        {{ end }}
-                        {{ with .subtitle }}
-                            <p>{{ . }}</p>
-                        {{ end }}
-                    </div>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="portfolio-filter">
@@ -30,21 +15,41 @@
                     </div>
                 </div>
             </div>
-            <div class="row filtr-container">
-                {{ range .item }}
-                    <div class="col-6 col-md-4 padding-0 filtr-item" data-category="{{.category}}">
+            <div class="row filtr-container the-gallery">
+                {{ $length := len .item }}
+                {{ range $index, $element := .item }}
+                {{ $file := (resources.Get $element.path) }}
+                {{ $path := $file.Permalink }}
+                {{ $scratch := newScratch }}
+                
+                {{ if not (strings.HasSuffix $path "png") }}
+                    {{ $thumbPath := print $element.path ".thumb.png"}}
+                    {{ $thump := resources.Get $thumbPath}}
+                    {{ $scratch.Set "thumb" (resources.Get $thumbPath) }}
+                {{ else }}
+                    {{ $scratch.Set "thumb" $file }}
+                {{end }}
+                <div class="col-6 col-md-3 padding-0 filtr-item" data-category="{{.category}}">
+                    {{ $thump := $scratch.Get "thumb"}}
+                    <a href="{{$path}}" data-size="{{$thump.Width}}x{{$thump.Height}}" data-pid="{{ urlize .title }}">
                         <div class="portfolio-block">
-                            <img class="img-fluid" src="{{ .image | absURL }}" alt="portfolio-image">
+                            <!-- <video preload="auto" autoplay="autoplay" loop="loop" style="width: 100%; height: auto;">
+                                <source src="{{ $path }}" type="video/mp4">
+                            </video> -->
+                            <img loading="lazy" width="400" height="400" class="img-fluid"
+                                src="{{ ($thump.Fill "400x400 NearestNeighbor").Permalink }}" alt="{{ .title }}">
+                            
                             <div class="caption">
-                                <a class="search-icon" href="{{ .image | absURL }}" data-lightbox="image-1">
+                                <!-- <a class="thumb-icon" href="{{ $path }}" data-lightbox="image-1">
                                     <i class="tf-ion-ios-search-strong"></i>
-                                </a>
+                                </a> -->
                                 <h4>
-                                    <a href="">{{ .title }}</a>
+                                    {{ .title }}
                                 </h4>
                             </div>
                         </div>
-                    </div>
+                    </a>
+                </div>
                 {{ end }}
             </div>
         </div>
@@ -53,3 +58,70 @@
     {{ "<!-- End section -->" | safeHTML }}
     {{ end }}
 {{ end }}
+<!-- Root element of PhotoSwipe. Must have class pswp. -->
+<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+
+    <!-- Background of PhotoSwipe. 
+         It's a separate element as animating opacity is faster than rgba(). -->
+    <div class="pswp__bg"></div>
+
+    <!-- Slides wrapper with overflow:hidden. -->
+    <div class="pswp__scroll-wrap">
+
+        <!-- Container that holds slides. 
+            PhotoSwipe keeps only 3 of them in the DOM to save memory.
+            Don't modify these 3 pswp__item elements, data is added later on. -->
+        <div class="pswp__container">
+            <div class="pswp__item"></div>
+            <div class="pswp__item"></div>
+            <div class="pswp__item"></div>
+        </div>
+
+        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+        <div class="pswp__ui pswp__ui--hidden">
+
+            <div class="pswp__top-bar">
+
+                <!--  Controls are self-explanatory. Order can be changed. -->
+
+                <div class="pswp__counter"></div>
+
+                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+                <button class="pswp__button pswp__button--share" title="Share"></button>
+
+                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+                <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
+                <!-- element will get class pswp__preloader--active when preloader is running -->
+                <div class="pswp__preloader">
+                    <div class="pswp__preloader__icn">
+                      <div class="pswp__preloader__cut">
+                        <div class="pswp__preloader__donut"></div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                <div class="pswp__share-tooltip"></div> 
+            </div>
+
+            <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+            </button>
+
+            <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+            </button>
+
+            <div class="pswp__caption">
+                <div class="pswp__caption__center"></div>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+<script src="{{ "photoswipe/gallery.js" | absURL }}"></script>
